<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/location_snapshot"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:src="@drawable/img_test"
        app:civ_border_color="#cccccc"
        app:civ_border_width="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <View
        android:id="@+id/line_right"
        android:layout_width="0dp"
        android:layout_height="4dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="#cccccc"
        app:layout_constraintBottom_toBottomOf="@+id/location_snapshot"
        app:layout_constraintStart_toEndOf="@+id/location_snapshot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/location_snapshot" />

    <TextView
        android:id="@+id/timeOfDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:text=""
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/line_right"
        app:layout_constraintEnd_toEndOf="@+id/line_right"
        app:layout_constraintBottom_toTopOf="@id/line_right"
        />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/line_right"
        app:layout_constraintEnd_toEndOf="@+id/line_right"
        app:layout_constraintTop_toBottomOf="@id/line_right">
        <TextView
            android:id="@+id/month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/month_holder"
            android:textSize="20sp"
            android:textAllCaps="true"
            android:textColor="#757575" />

        <TextView
            android:id="@+id/day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/day_holder"
            android:textSize="20sp"
            android:textColor="#444444" />
    </LinearLayout>

    <TextView
        android:id="@+id/events"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintStart_toStartOf="@+id/location_snapshot"
        app:layout_constraintEnd_toEndOf="@+id/line_right"
        app:layout_constraintTop_toBottomOf="@id/location_snapshot"
        app:layout_constraintBottom_toTopOf="@id/diary"
        />

    <EditText
        android:id="@+id/diary"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:lines="10"
        android:hint="@string/diary_hint"
        app:layout_constraintStart_toStartOf="@+id/location_snapshot"
        app:layout_constraintEnd_toEndOf="@+id/line_right"
        app:layout_constraintTop_toBottomOf="@id/events"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>